--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <path d="M10.35 10.35L6 6" stroke="#4C5866" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
 
-                <svg class="butSearchExit" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg class="butExit" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g clip-path="url(#clip0_1_497)">
                         <path d="M15 3H19C19.5304 3 20.0391 3.21071 20.4142 3.58579C20.7893 3.96086 21 4.46957 21 5V19C21 19.5304 20.7893 20.0391 20.4142 20.4142C20.0391 20.7893 19.5304 21 19 21H15" stroke="#4C5866" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                         <path d="M10 17L15 12L10 7" stroke="#4C5866" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -89,13 +89,13 @@
 
 
     <div class="headerMainBlock">
-        <p>Простые вещи.<br>Из бумаги</p>
+        <p class="headerMainBlockHeader">Простые вещи.<br>Из бумаги</p>
         <p>Бума́га (предположительно от итал. bombagia, первоисточником же считается иранский) — волокнистый материал
                 с минеральными добавками. </p>
-        <a href="#catalog"><button class="button">Каталог</button></a>
+       <button class="button"><a href="#catalog">Каталог</a></button>
     </div>
-    <main>
 
+    <main>
         <div class="materials" id="materials">
             <div class="materialsV">
                 <div class="materialV">
@@ -134,8 +134,8 @@
             <div class="product">
                 <img src="recourses/imageProducts/pack.svg" alt="">
                 <p class="productHeader">Упаковка</p>
-                <p class="tirage">Тираж: от 50 штук</p>
-                <p>Сделано из крафт-бумаги или плотного картона. Упаковки имеют различные формы и расцветки, изготовим форму под заказ.</p>
+                <p class="productEdition">Тираж: от 50 штук</p>
+                <p class="productDescription">Сделано из крафт-бумаги или плотного картона. Упаковки имеют различные формы и расцветки, изготовим форму под заказ.</p>
                 <button class="butAbout">Подробнее <svg width="21" height="15" viewBox="0 0 21 15" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M20.7071 8.20711C21.0976 7.81658 21.0976 7.18342 20.7071 6.79289L14.3431 0.428932C13.9526 0.0384078 13.3195 0.0384078 12.9289 0.428932C12.5384 0.819457 12.5384 1.45262 12.9289 1.84315L18.5858 7.5L12.9289 13.1569C12.5384 13.5474 12.5384 14.1805 12.9289 14.5711C13.3195 14.9616 13.9526 14.9616 14.3431 14.5711L20.7071 8.20711ZM0 8.5H20V6.5H0V8.5Z" fill="#7875FE"/>
                 </svg>
@@ -144,8 +144,8 @@
             <div class="product">
                 <img src="recourses/imageProducts/paket.svg" alt="">
                 <p class="productHeader">Пакеты</p>
-                <p class="tirage">Тираж: от 200 штук</p>
-                <p>С прямоугольным дном. От 10 см до 60 см по высоте. Материалы: картон, крафт-бумага. Различные расцветки и дизайн.</p>
+                <p class="productEdition">Тираж: от 200 штук</p>
+                <p class="productDescription">С прямоугольным дном. От 10 см до 60 см по высоте. Материалы: картон, <br>крафт-бумага. Различные расцветки и дизайн.</p>
                 <button class="butAbout">Подробнее <svg width="21" height="15" viewBox="0 0 21 15" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M20.7071 8.20711C21.0976 7.81658 21.0976 7.18342 20.7071 6.79289L14.3431 0.428932C13.9526 0.0384078 13.3195 0.0384078 12.9289 0.428932C12.5384 0.819457 12.5384 1.45262 12.9289 1.84315L18.5858 7.5L12.9289 13.1569C12.5384 13.5474 12.5384 14.1805 12.9289 14.5711C13.3195 14.9616 13.9526 14.9616 14.3431 14.5711L20.7071 8.20711ZM0 8.5H20V6.5H0V8.5Z" fill="#7875FE"/>
                 </svg>
@@ -154,8 +154,8 @@
             <div class="product">
                 <img src="recourses/imageProducts/case.svg" alt="">
                 <p class="productHeader">Кейсы</p>
-                <p class="tirage">Тираж: от 30 штук</p>
-                <p>Подойдет для документов и других бумаг. Различные расцветки, размеры и плотность. Материал: прессованная бумага.</p>
+                <p class="productEdition">Тираж: от 30 штук</p>
+                <p class="productDescription">Подойдет для документов и других бумаг. Различные расцветки, размеры и плотность. Материал: прессованная бумага.</p>
                 <button class="butAbout butAboutArrow">Подробнее <svg width="21" height="15" viewBox="0 0 21 15" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M20.7071 8.20711C21.0976 7.81658 21.0976 7.18342 20.7071 6.79289L14.3431 0.428932C13.9526 0.0384078 13.3195 0.0384078 12.9289 0.428932C12.5384 0.819457 12.5384 1.45262 12.9289 1.84315L18.5858 7.5L12.9289 13.1569C12.5384 13.5474 12.5384 14.1805 12.9289 14.5711C13.3195 14.9616 13.9526 14.9616 14.3431 14.5711L20.7071 8.20711ZM0 8.5H20V6.5H0V8.5Z" fill="#7875FE"/>
                 </svg>
@@ -164,8 +164,8 @@
             <div class="product">
                 <img src="recourses/imageProducts/other.svg" alt="">
                 <p class="productHeader">Другие изделия</p>
-                <p class="tirage">Тираж: от 100 штук</p>
-                <p>Нестандартные упаковки, кейсы и другие изделия различных размеров и конфигураций. Изготовим в кратчайшие сроки.</p>
+                <p class="productEdition">Тираж: от 100 штук</p>
+                <p class="productDescription">Нестандартные упаковки, кейсы и другие изделия различных размеров и конфигураций. Изготовим в кратчайшие сроки.</p>
                 <button class="butAbout">Подробнее <svg width="21" height="15" viewBox="0 0 21 15" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M20.7071 8.20711C21.0976 7.81658 21.0976 7.18342 20.7071 6.79289L14.3431 0.428932C13.9526 0.0384078 13.3195 0.0384078 12.9289 0.428932C12.5384 0.819457 12.5384 1.45262 12.9289 1.84315L18.5858 7.5L12.9289 13.1569C12.5384 13.5474 12.5384 14.1805 12.9289 14.5711C13.3195 14.9616 13.9526 14.9616 14.3431 14.5711L20.7071 8.20711ZM0 8.5H20V6.5H0V8.5Z" fill="#7875FE"/>
                 </svg>
